Fix z-index issue filters

--- a/content/scss/_c-navbar.scss
+++ b/content/scss/_c-navbar.scss
@@ -49,7 +49,7 @@
   }
 }
 
-.c-navbar--app {
+.c-navbar--scrollable {
   overflow-x: auto;
   overflow-y: hidden;
   display: flex;
